<resources>
    <string name="app_name">PHMST72021</string>
    <string name="add_diet">Diet</string>
    <string name="daily_caloric_intake">Calories</string>
    <string name="daily_food_intake">Food</string>
    <string name="recipes">Recipes</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log Out</string>
    <string name="update_profile">Update Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_diet_btn">Add Diet</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_your_account_n_welcome_to_phms">Create Your Account\n Welcome to PHMS!</string>
    <string name="submit">Submit</string>
    <string name="got_an_account">Got an account?</string>
    <string name="welcome_to_phms_ncreate_your_account">Welcome to PHMS!\nCreate your account:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log in</string>
    <string name="patient">Patient</string>
    <string name="caretaker">CareTaker</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="update">Update</string>
    <string name="height">Height</string>
    <string name="select_date">Select Date</string>
    <string name="annual_checkup_date">Annual Checkup Date:</string>
    <string name="weight">Weight</string>
    <string name="general_notes">General Notes</string>

    <string-array name="MedMeasurements">
        <item>select</item>
        <item>mg</item>
        <item>g</item>
        <item>mL</item>
        <item>L</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>

