<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/round_grey"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/SubmitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/round_grey"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:gravity="center"
        android:hint="@string/email_address"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:ignore="RtlSymmetry,TextFields" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="311dp"
        android:layout_height="117dp"
        android:text="@string/create_your_account_n_welcome_to_phms"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="30dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/SubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="170dp"
        android:background="@drawable/round_grey"
        android:backgroundTint="@color/black"
        android:onClick="onSubmit"
        android:text="@string/submit"
        app:iconTint="#0E0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>